; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_watch_jobs_in_progress.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_watch_jobs_in_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32 }

@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@JOBS_IN_PROGRESS_WAIT_USEC = common dso_local global i64 0, align 8
@manager_dispatch_jobs_in_progress = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"manager-jobs-in-progress\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*)* @manager_watch_jobs_in_progress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @manager_watch_jobs_in_progress(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %6 = call i32 @assert(%struct.TYPE_6__* %5)
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %8 = call i32 @manager_is_confirm_spawn_disabled(%struct.TYPE_6__* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %40

11:                                               ; preds = %1
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  br label %40

17:                                               ; preds = %11
  %18 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %19 = call i64 @now(i32 %18)
  %20 = load i64, i64* @JOBS_IN_PROGRESS_WAIT_USEC, align 8
  %21 = add nsw i64 %19, %20
  store i64 %21, i64* %3, align 8
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %28 = load i64, i64* %3, align 8
  %29 = load i32, i32* @manager_dispatch_jobs_in_progress, align 4
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %31 = call i32 @sd_event_add_time(i32 %24, i64* %26, i32 %27, i64 %28, i32 0, i32 %29, %struct.TYPE_6__* %30)
  store i32 %31, i32* %4, align 4
  %32 = load i32, i32* %4, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %17
  br label %40

35:                                               ; preds = %17
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = call i32 @sd_event_source_set_description(i64 %38, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %40

40:                                               ; preds = %35, %34, %16, %10
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_6__*) #1

declare dso_local i32 @manager_is_confirm_spawn_disabled(%struct.TYPE_6__*) #1

declare dso_local i64 @now(i32) #1

declare dso_local i32 @sd_event_add_time(i32, i64*, i32, i64, i32, i32, %struct.TYPE_6__*) #1

declare dso_local i32 @sd_event_source_set_description(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
